--- a/first/index.html
+++ b/first/index.html
@@ -2,7 +2,8 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title></title>
+        <title>Day 2 Afternoon Project, First File</title>
+        
     </head>
     <body>
 
