--- a/first/index.html
+++ b/first/index.html
@@ -2,10 +2,15 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <meta charset="UTF-8">
+        <meta name="description" content="first folder css project">
+        <meta name="keywords" content="first, css">
+        <meta name="author" content="Kara LeSueur">
+        <meta name="viewport" content="width=dive=width, initial-scale=1.0">
+        <link rel='stylesheet' href='index.css'>
         <title>Day 2 Afternoon Project, First File</title>
-        
     </head>
     <body>
-
+        <div></div>
     </body>
     </html>
