--- a/first/index.html
+++ b/first/index.html
@@ -11,6 +11,8 @@
         <title>Day 2 Afternoon Project, First File</title>
     </head>
     <body>
-        <div></div>
+        <div class="header"></div>
+        <div class="main content"></div>
+        <div class="footer"></div>
     </body>
     </html>
