--- a/first/index.html
+++ b/first/index.html
@@ -1,18 +1,16 @@
 <!-- Put your HTML HERE, make sure to connect your index.css sheet -->
 <!DOCTYPE html>
-<html lang="en">
+<html>>
     <head>
         <meta charset="UTF-8">
-        <meta name="description" content="first folder css project">
-        <meta name="keywords" content="first, css">
-        <meta name="author" content="Kara LeSueur">
-        <meta name="viewport" content="width=dive=width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel='stylesheet' href='index.css'>
         <title>Day 2 Afternoon Project, First File</title>
     </head>
     <body>
-        <div class="header"></div>
-        <div class="main content"></div>
-        <div class="footer"></div>
+            <div class="header"></div>
+            <div class="main content"></div>
+            <div class="footer"></div>
+        
     </body>
     </html>
