--- a/second/index.html
+++ b/second/index.html
@@ -1,1 +1,13 @@
 <!-- Put your HTML HERE, make sure to connect your index.css sheet -->
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <tile> 1.2 project 1/3.</tile>
+        <link rel="stylesheets" href="reset.css">
+    </head>
+</html>
+<body>
+    
+</body>
