--- a/second/index.html
+++ b/second/index.html
@@ -7,7 +7,21 @@
         <tile> 1.2 project 1/3.</tile>
         <link rel="stylesheets" href="reset.css">
     </head>
-</html>
+
 <body>
     
+    <section class="top container">
+        <div id="purple-box"></div>
+        <div id="green-box"></div>
+        <div id="blue-circle"></div>
+    </section>
+
+    <section class="mid-container">
+        <div id="yellow-box"></div>
+    </section>
+
+    <section class="bottom-container">
+        <div id="greeting-box"></div>
+    </section>
 </body>
+</html>
