--- a/second/index.html
+++ b/second/index.html
@@ -10,7 +10,7 @@
 
 <body>
     
-    <section class="top container">
+    <section class="top-container">
         <div id="purple-box"></div>
         <div id="green-box"></div>
         <div id="blue-circle"></div>
