--- a/second/index.html
+++ b/second/index.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <tile> 1.2 project 1/3.</tile>
-        <link rel="stylesheets" href="reset.css">
+        <link rel="stylesheets" href="reset.css"/>
     </head>
 
 <body>
