--- a/first/index.html
+++ b/first/index.html
@@ -4,13 +4,14 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="reset.css">
         <link rel='stylesheet' href='index.css'>
-        <title>Day 2 Afternoon Project, First File</title>
+        <title>Day 2 Afternoon Project First</title>
     </head>
     <body>
-            <div class="header"></div>
-            <div class="main content"></div>
-            <div class="footer"></div>
+            <div class="header">HEADER</div>
+            <div class="main content">MAIN CONTENT</div>
+            <div class="footer">FOOTER</div>
         
     </body>
     </html>
