--- a/first/index.html
+++ b/first/index.html
@@ -10,7 +10,7 @@
     </head>
     <body>
             <div class="header">HEADER</div>
-            <div class="main content">MAIN CONTENT</div>
+            <div class="main-content">MAIN CONTENT</div>
             <div class="footer">FOOTER</div>
         
     </body>
