--- a/second/index.html
+++ b/second/index.html
@@ -1,27 +1,25 @@
 <!-- Put your HTML HERE, make sure to connect your index.css sheet -->
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <tile> 1.2 project 1/3.</tile>
-        <link rel="stylesheets" href="reset.css"/>
+        <link rel="stylesheet" href="reset.css">
+        <link rel='stylesheet' href='index.css'>
+        <title>Day 2 Afternoon Project Second</title>
     </head>
 
 <body>
-    
-    <section class="top-container">
-        <div id="purple-box"></div>
-        <div id="green-box"></div>
-        <div id="blue-circle"></div>
-    </section>
 
-    <section class="mid-container">
-        <div id="yellow-box"></div>
-    </section>
-
-    <section class="bottom-container">
-        <div id="greeting-box"></div>
-    </section>
+    <div class="top-container"></div>
+    <div class="purple-box"></div>
+    <div class="green-box"></div>
+    <div class="blue-circle"></div>
+    <div class="cream-box"></div>
+    <div></div>
+    <div class="bottom-container">
+        <p>HELLO FRIENDS</p>
+        </div>
+        
 </body>
 </html>
