HTML CSS outline

--- a/third/index.html
+++ b/third/index.html
@@ -1,1 +1,24 @@
 <!-- Put your HTML HERE, make sure to connect your index.css sheet -->
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="reset.css">
+        <link rel='stylesheet' href='index.css'>
+        <title>Day 2 Afternoon Project Third</title>
+    </head>
+
+    <body>
+
+        <div class="top-gray"></div>
+
+        <div class="white-article"></div>
+
+        <div class="blue-row"></div>
+        <div class="cyan-row"></div>
+        <div class="yellow-green-row"></div>
+        <div class="yellow-row"></div>
+
+    </body>
+</html>
