--- a/third/index.html
+++ b/third/index.html
@@ -12,8 +12,13 @@
     <body>
 
         <div class="top-gray"></div>
+        <div class="top-left-corner"></div>
 
-        <div class="white-article"></div>
+        <div class="white-article">
+            <span>
+            Consider hiding the status bar - and all other app UI - while people are actively viewing full-screen media. If you hide the status bar, be sure to let people retrieve it (and the appropriate app UI) with a single tap. Unless you have a compelling reason to do so, avoid defining a custom gesture to redisplay the status bar because users are unlikely to discover such a gesture or to remember it.
+        </span>
+        </div>
 
         <div class="blue-row"></div>
         <div class="cyan-row"></div>
