--- a/first/index.html
+++ b/first/index.html
@@ -9,9 +9,8 @@
         <title>Day 2 Afternoon Project First</title>
     </head>
     <body>
-            <div class="header">HEADER</div>
-            <div class="main-content">MAIN CONTENT</div>
-            <div class="footer">FOOTER</div>
-        
+            <div class="header"></div>
+            <div class="main-content"></div>
+            <div class="footer"></div>
     </body>
     </html>
