second almost complete

--- a/second/index.html
+++ b/second/index.html
@@ -11,15 +11,18 @@
 
 <body>
 
-    <div class="top-container"></div>
-    <div class="purple-box"></div>
-    <div class="green-box"></div>
-    <div class="blue-circle"></div>
-    <div class="cream-box"></div>
-    <div></div>
+    <div class="top-container">
+        <div class="purple-box"></div>
+        <div class="green-box"></div>
+        <div class="blue-circle"></div>
+    </div>
+    
+    <div class="cream-container">
+        <div class='cream-box'></div>
+    </div>
     <div class="bottom-container">
-        <p>HELLO FRIENDS</p>
-        </div>
+        <p>HELLO <br> FRIENDS</p>
+    </div>
         
 </body>
 </html>
